--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="page">
     <header class="header">
-      <img src="./images/logo_place_header.svg" alt="logo" class="logo logo__place_header">  
+      <img src="./images/logo_place_header.svg" alt="Лого" class="logo logo__place_header">  
       <h1 class="header__title">Научиться учиться</h1>  
       <p class="header__subtitle">Какие современные и эффективные подходы 
         к&nbsp;обучению вы можете использовать в своей жизни? 
@@ -132,7 +132,7 @@
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <img src="./images/logo_place_footer.svg" alt="logo" class="logo logo__place_footer">
+          <img src="./images/logo_place_footer.svg" alt="Лого" class="logo logo__place_footer">
           <p class="footer__author">&copy; Наталья Сарычева</p>
         </div>
 
