--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
   <div class="page">
     <header class="header">
-      <img src="./images/logo_place_header.svg" alt="Лого" class="logo logo__place_header">  
+      <a href="#"><img src="./images/logo_place_header.svg" alt="Лого" class="logo logo_place_header"></a>
       <h1 class="header__title">Научиться учиться</h1>  
       <p class="header__subtitle">Какие современные и эффективные подходы 
-        к&nbsp;обучению вы можете использовать в своей жизни? 
+        к&nbsp;обучению вы можете использовать в своей жизни?
         <a href="#" class="header__link">Узнать &rarr;</a>
       </p>
       <div class="header__main-illustration"></div>
@@ -23,10 +23,10 @@
     <main class="content">
       <section class="description">
         <div class="two-columns">
-          <div class="two-columns__brief">Главные проблемы в обучении</div>
+          <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
           <div class="two-colums__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-              <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало, где учат. Что с этим делать?
+              <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
               </p>
             <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
@@ -76,7 +76,7 @@
 
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>  
-        <p class="feynman__subtitle">Выучить и не забыть.></p>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
         <a href="#" class="feynman__link">Подробнее &rarr;</a>
       </section>
 
@@ -85,43 +85,43 @@
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">1</p>
+            <h4 class="table__heading table__heading_theme_dark">1</h4>
             <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
           </li> 
           <li class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">2</p>
+            <h4 class="table__heading table__heading_theme_dark">2</h4>
             <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </li> 
           <li class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">3</p>
+            <h4 class="table__heading table__heading_theme_dark">3</h4>
             <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </li> 
           <li class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">4</p>
+            <h4 class="table__heading table__heading_theme_dark">4</h4>
             <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
           </li> 
           <li class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">5</p>
+            <h4 class="table__heading table__heading_theme_dark">5</h4>
             <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
           </li> 
           <li class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">6</p>
+            <h4 class="table__heading table__heading_theme_dark">6</h4>
             <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
           </li> 
           <li class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">7</p>
+            <h4 class="table__heading table__heading_theme_dark">7</h4>
             <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
           </li> 
           <li class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">8</p>
+            <h4 class="table__heading table__heading_theme_dark">8</h4>
             <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
           </li> 
           <li class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">9</p>
+            <h4 class="table__heading table__heading_theme_dark">9</h4>
             <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </li> 
           <li class="table__cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">10</p>
+            <h4 class="table__heading table__heading_theme_dark">10</h4>
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>             
         </ul>
@@ -132,27 +132,32 @@
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <img src="./images/logo_place_footer.svg" alt="Лого" class="logo logo__place_footer">
+          <img src="./images/logo_place_footer.svg" alt="Лого" class="logo logo_place_footer">
           <p class="footer__author">&copy; Наталья Сарычева</p>
         </div>
 
-        <nav class="footer__column footer__column_content_info">
+        <div class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
-          <ul class="footer__column-links">
-            <li><a href="" class="footer__column-link">Главная</a></li>
-            <li><a href="" class="footer__column-link">Концепция</a></li>
-            <li><a href="" class="footer__column-link">Наставники</a></li> 
-          </ul>
+          <nav>
+            <ul class="footer__column-links">
+              <li><a href="#" class="footer__column-link">Главная</a></li>
+              <li><a href="#" class="footer__column-link">Концепция</a></li>
+              <li><a href="#" class="footer__column-link">Наставники</a></li> 
+            </ul>
+          </nav>
+        </div>
         </nav>
 
-        <nav class="footer__column footer__column_content_social">
+        <div class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
-          <ul class="footer__column-links">
-            <li><a href="" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Фейсбук" class="footer__social_icon">Facebook</a></li>
-            <li><a href="" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="Вконтакте" class="footer__social_icon">ВКонтакте</a></li>
-            <li><a href="" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="Инстаграм" class="footer__social_icon">Instagram</a></li>
-          </ul>         
-        </nav>
+          <nav>
+            <ul class="footer__column-links">
+              <li><a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Фейсбук" class="footer_social_icon">Facebook</a></li>
+              <li><a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="Вконтакте" class="footer_social_icon">ВКонтакте</a></li>
+              <li><a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="Инстаграм" class="footer_social_icon">Instagram</a></li>
+            </ul>         
+          </nav>
+        </div>
       </div>
     </footer>
   </div>
