--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main class="content">
       <section class="description">
         <div class="two-columns">
-          <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-colums__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
               <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
@@ -132,7 +132,7 @@
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <img src="./images/logo_place_footer.svg" alt="Лого" class="logo logo_place_footer">
+          <a href="#"><img src="./images/logo_place_footer.svg" alt="Лого" class="logo logo_place_footer"></a>
           <p class="footer__author">&copy; Наталья Сарычева</p>
         </div>
 
@@ -151,9 +151,9 @@
           <h3 class="footer__column-heading">Соцсети</h3>
           <nav>
             <ul class="footer__column-links">
-              <li><a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Фейсбук" class="footer_social_icon">Facebook</a></li>
-              <li><a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="Вконтакте" class="footer_social_icon">ВКонтакте</a></li>
-              <li><a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="Инстаграм" class="footer_social_icon">Instagram</a></li>
+              <li><a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Фейсбук" class="footer__social-icon">Facebook</a></li>
+              <li><a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="Вконтакте" class="footer__social-icon">ВКонтакте</a></li>
+              <li><a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="Инстаграм" class="footer__social-icon">Instagram</a></li>
             </ul>         
           </nav>
         </div>
