--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
         <ul class="resources__logo-zone">
           <li><a href="#"><img src="./images/resources-arzamas.svg" alt="Арзамас" class="resources__link"></a></li>
-          <li><a href="#"><img src="./images/resources-n1.svg" alt="N+1" class="resources__link"></a></li>
+          <li><a href="#"><img src="./images/resources-n1.svg" alt="Н+1" class="resources__link"></a></li>
           <li><a href="#"><img src="./images/resources-strelka.svg" alt="Стрелка" class="resources__link"></a></li>
           <li><a href="#"><img src="./images/resources-polka.svg" alt="Полка" class="resources__link"></a></li>
         </ul>
