--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
           </li>
           <li class="cards__item">
-            <img src="./images/cards-recall.png" alt="Recall" class="cards__image">
+            <img src="./images/cards-recall.png" alt="Вспоминайте изученное" class="cards__image">
             <h4 class="cards__title">Recall</h4>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
           </li>
